[package]
name = "hydra"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
clap = { version = "4.5.7", features = ["derive"] }
dotenvy = "0.15.7"
gcloud-sdk = { git = "https://github.com/abdolence/gcloud-sdk-rs/", rev = "d010e1b6dcf5d8abafefa35498f6aaa41eef29e0", features = ["google-rest-compute-v1", "tls-webpki-roots"] }
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["rustls-tls"], default-features = false }
russh = "0.44.0-beta.2"
russh-keys = "0.44.0-beta.2"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
# virt = { git = "https://gitlab.com/libvirt/libvirt-rust", rev = "3d2cc34fa75ecd6f6e8121cdc6c99687b62d2a4f", features = ["qemu"] }
virt = "0.3.1"
