[package]
name = "hydra"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
clap = { version = "4.5.8", features = ["derive"] }
dotenvy = "0.15.7"
gcloud-sdk = { git = "https://github.com/abdolence/gcloud-sdk-rs/", rev = "d010e1b6dcf5d8abafefa35498f6aaa41eef29e0", features = [
    "google-rest-compute-v1",
    "tls-webpki-roots",
    "google-cloud-billing-budgets-v1beta1",
    "google-cloud-billing-budgets-v1",
    "google-cloud-billing-v1",
    "google-api",
    "google-cloud-common",
] }
rand = "0.8.5"
reqwest = { version = "0.12.5", features = [
    "rustls-tls",
    "json",
], default-features = false }
russh = "0.44.0-beta.2"
russh-keys = "0.44.0-beta.2"
serde_json = "1.0.119"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
virt = { version = "0.3.1", optional = true }
# virt = { git = "https://gitlab.com/libvirt/libvirt-rust", rev = "3d2cc34fa75ecd6f6e8121cdc6c99687b62d2a4f", features = ["qemu"] }
tonic = "0.11.0"
serde = { version = "1.0.203", features = ["derive"] }
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = { version = "1.3.0" }
aws-types = { version = "1.0.1" }
color-eyre = { version = "0.6.3" }
rs-docker = { git = "https://gitlab.com/Nereuxofficial/rust-docker", branch = "cleanup", features = [
    "experimental",
] }
futures = "0.3.30"

[features]
default = []
libvirt = ["virt"]
mock_termination = []

[profile.release]
strip = true
